<resources>

    <!--app names-->

    <string name="app_name" translatable="false">Clippy</string>

    <!--share options names-->

    <string name="clippy_copy_link">Copy Link</string>
    <string name="clippy_copy_link_cleaner">Copy Link (Clean)</string>

    <!--preferences-->

    <string name="pref_category_appearance">Appearance</string>
    <string name="pref_category_behavior">Behavior</string>
    <string name="pref_category_about">About</string>

    <string name="pref_wstxda" translatable="false">WSTxda</string>
    <string name="pref_github" translatable="false">GitHub</string>
    <string name="pref_developer">Developer</string>
    <string name="pref_source_code">Source code repository</string>

    <string name="pref_theme">Theme</string>

    <string name="pref_skip_dialog">Skip dialog preview</string>
    <string name="pref_skip_dialog_summary">Process and copy the link to the clipboard immediately, skipping the dialog for a faster flow but without link preview</string>

    <string name="pref_clean_modules">Process links modules</string>
    <string name="pref_clean_modules_summary">Choose which modules is used to process links when <b>skip dialog preview</b> option is enabled</string>

    <string name="pref_open_in_browser">Open in browser</string>
    <string name="pref_open_in_browser_summary">Open the link in the browser after copying it to the clipboard</string>

    <string name="pref_clear_clipboard">Clear clipboard</string>

    <string name="pref_used_library">Libraries</string>
    <string name="pref_used_library_summary">Open source licenses</string>

    <string name="pref_version">Version</string>
    <string name="pref_version_number" translatable="false">%s</string>

    <!--modules selector-->

    <string name="module_select">Apply modules</string>
    <!--modules-->
    <string name="module_shorteners">Shorteners remover</string>
    <string name="module_trackers">Trackers remover</string>
    <string name="module_redirection">Redirection handler</string>
    <string name="module_builtin_rules">Built-in rules</string>

    <!--theme selector-->

    <string name="theme_select">Select theme</string>
    <!--themes modes-->
    <string name="theme_system">System default</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>

    <!--update checker-->

    <string name="update_checker_button">Check updates</string>
    <string name="update_checker_download_button">Download</string>
    <!--updater messages-->
    <string name="update_checker_no_update">No update available</string>
    <string name="update_checker_update_available">New update available: %s</string>
    <string name="update_checker_no_internet">No internet connection</string>
    <string name="update_checker_generic_error">Something went wrong… Please try again later</string>

    <!--tutorial-->

    <string name="tutorial_title">How to process and copy links</string>

    <string name="tutorial_share_menu">Using the share menu</string>
    <string name="tutorial_share_menu_summary">In any app, tap the <b>Share</b> icon or button on a link and select <b>Clippy</b> from the list of apps. You will then have the option to choose <b>Copy link</b> to copy the original link, or <b>Copy link (Clean)</b> to copy the cleaned version using modules</string>

    <string name="tutorial_select_text_menu">Using the text selection menu</string>
    <string name="tutorial_select_text_summary">Highlight a URL or a piece of text containing a link. In the floating menu that appears (next to "Copy" and "Paste"), tap the three-dot menu and select <b>Copy link</b> to copy the original link, or <b>Copy link (Clean)</b> to copy the cleaned version using modules</string>

    <!--copy link messages-->

    <string name="copy_success_clipboard">Copied to clipboard</string>
    <string name="copy_failure_general">Unable to copy link</string>
    <string name="copy_failure_no_valid_links">No valid links found</string>
    <string name="copy_failure_error_cleaning">Error cleaning links</string>
    <string name="copy_failure_empty_after_cleaning">Links had no content after cleaning</string>
    <string name="copy_failure_open_browser">Error opening link in browser</string>
    <string name="clipboard_success_clear">Clipboard cleared successfully</string>

    <!--copy link bottom sheet dialog-->

    <!-- dialog modules-->
    <string name="dialog_apply_all_modules">Apply all modules</string>
    <string name="dialog_module_shorteners">Remove shorteners</string>
    <string name="dialog_module_trackers">Remove trackers</string>
    <string name="dialog_module_redirection">Resolve redirections</string>
    <string name="dialog_module_builtin_rules">Apply built-in rules</string>
    <!-- dialog buttons-->
    <string name="dialog_clean_button">Clear link</string>
    <string name="dialog_copy_clipboard_button">Copy to clipboard</string>
    <string name="dialog_open_in_browser_button">Open in browser</string>
    <!--dialog text input-->
    <string name="dialog_original_link">Original link</string>
    <string name="dialog_cleaned_link">Cleaned link</string>
</resources>