<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view_link_modules"
    style="?attr/materialCardViewFilledStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="?attr/colorSecondaryContainer"
    app:cardCornerRadius="20dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="17dp"
        android:layout_marginVertical="8dp"
        android:orientation="vertical">

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/switch_apply_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_apply_all_modules"
            android:textAppearance="?attr/textAppearanceTitleMediumEmphasized"
            android:textColor="?attr/colorOnSecondaryContainer"
            app:thumbIcon="@drawable/ic_check_switch" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/modules_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_shorteners"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/dialog_module_shorteners"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="?attr/colorOnSecondaryContainer" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_trackers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/dialog_module_trackers"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="?attr/colorOnSecondaryContainer" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_redirection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/dialog_module_redirection"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="?attr/colorOnSecondaryContainer" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/checkbox_builtin_rules"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:text="@string/dialog_module_builtin_rules"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textColor="?attr/colorOnSecondaryContainer" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.LinearLayoutCompat>
</com.google.android.material.card.MaterialCardView>