<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="?attr/listPreferredItemPaddingStart"
    android:layout_marginEnd="?attr/listPreferredItemPaddingEnd"
    android:background="@drawable/preference_background_bottom"
    android:clickable="true"
    android:focusable="true"
    android:padding="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@android:id/title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:ellipsize="marquee"
        android:maxLines="2"
        android:textAppearance="?attr/textAppearanceTitleMedium"
        app:layout_constraintEnd_toStartOf="@+id/check_updates"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/pref_version" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:maxLines="8"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textColor="?android:textColorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@android:id/title"
        app:layout_constraintStart_toStartOf="@android:id/title"
        app:layout_constraintTop_toBottomOf="@android:id/title"
        tools:text="@string/pref_version_number" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/check_updates"
        style="@style/Widget.Material3Expressive.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:text="@string/update_checker_button"
        app:icon="@drawable/ic_update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>